# lazymake

./: .cargo-publish.toml  .gitignore  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  justfile
src/: app.rs  executor.rs  main.rs  parser.rs  tui.rs
